static/clear/css/styles.css
/* ... */
.mejs-captions-layer {
  position: absolute;
  bottom: 0;
  left: 0;
  text-align: center;
  line-height: 22px;
  font-size: 12px;
  color: #fff;
}
.mejs-captions-layer a {
  color: #fff;
  text-decoration: none;
}
.mejs-captions-layer[lang=ar] {
  font-size: 20px;
  font-weight: normal;
}
.mejs-captions-position {
  position: absolute;
  width: 100%;
  bottom: 15px;
  left: 0;
}
.mejs-captions-position-hover {
  bottom: 45px;
}
.mejs-captions-text {
  padding: 3px 5px;
  background: rgba(20,20,20,0.8);
}
.me-cannotplay a {
  color: #fff;
  font-weight: bold;
}
.me-cannotplay span {
  padding: 15px;
  display: block;
}
.mejs-controls .mejs-loop-off button {
  background-position: -81px;
}
.mejs-controls .mejs-loop-on button {
  background-position: -64px 0;
}
.mejs-controls .mejs-backlight-off button {
  background-position: -80px -16px;
}
.mejs-controls .mejs-backlight-on button {
  background-position: -80px 0;
}
.mejs-controls .mejs-picturecontrols-button {
  background-position: -96px 0;
}
.mejs-contextmenu {
  position: absolute;
  width: 150px;
  padding: 10px;
  top: 0;
  left: 0;
  background: #fff;
  border: 1px solid #999;
  z-index: 1001;
}
.mejs-contextmenu .mejs-contextmenu-separator {
  height: 1px;
  font-size: 0;
  margin: 5px 6px;
  background: #333;
}
.mejs-contextmenu .mejs-contextmenu-item {
  font-family: helvetica, arial;
  font-size: 12px;
  padding: 4px 6px;
  cursor: pointer;
  color: #333;
}
.mejs-contextmenu .mejs-contextmenu-item:hover {
  background: #2c7c91;
  color: #fff;
}
.mejs-controls .mejs-sourcechooser-button {
  position: relative;
}
.mejs-controls .mejs-sourcechooser-button button {
  background-position: -128px 0;
}
.mejs-controls .mejs-sourcechooser-button .mejs-sourcechooser-selector {
  visibility: hidden;
  position: absolute;
  bottom: 26px;
  right: -10px;
  width: 130px;
  height: 100px;
  background: rgba(50,50,50,0.7);
  border: 1px solid transparent;
  padding: 10px;
  overflow: hidden;
}
.mejs-controls .mejs-sourcechooser-button .mejs-sourcechooser-selector ul {
  margin: 0;
  padding: 0;
  display: block;
  list-style-type: none !important;
  overflow: hidden;
}
.mejs-controls .mejs-sourcechooser-button .mejs-sourcechooser-selector ul li {
  margin: 0 0 6px 0;
  padding: 0;
  list-style-type: none !important;
  display: block;
  color: #fff;
  overflow: hidden;
}
.mejs-controls .mejs-sourcechooser-button .mejs-sourcechooser-selector ul li input {
  clear: both;
  float: left;
  margin: 3px 3px 0 5px;
}
.mejs-controls .mejs-sourcechooser-button .mejs-sourcechooser-selector ul li label {
  width: 100px;
  padding: 4px 0 0 0;
  line-height: 15px;
  font-family: helvetica, arial;
  font-size: 10px;
}
.mejs-postroll-layer {
  position: absolute;
  bottom: 0;
  left: 0;
  width: 100%;
  height: 100%;
  background: rgba(50,50,50,0.7);
  z-index: 1000;
  overflow: hidden;
}
.mejs-postroll-layer-content {
  width: 100%;
  height: 100%;
}
.mejs-postroll-close {
  position: absolute;
  right: 0;
  top: 0;
  background: rgba(50,50,50,0.7);
  color: #fff;
  padding: 4px;
  cursor: pointer;
}
@-moz-keyframes buffering-stripes {
  0% {
    background-position: 0 0;
  }

  100% {
    background-position: 30px 0;
  }
}
@-webkit-keyframes buffering-stripes {
  0% {
    background-position: 0 0;
  }

  100% {
    background-position: 30px 0;
  }
}
@-o-keyframes buffering-stripes {
  0% {
    background-position: 0 0;
  }

  100% {
    background-position: 30px 0;
  }
}
@-ms-keyframes buffering-stripes {
  0% {
    background-position: 0 0;
  }

  100% {
    background-position: 30px 0;
  }
}
@keyframes buffering-stripes {
  0% {
    background-position: 0 0;
  }

  100% {
    background-position: 30px 0;
  }
}
/*END MEDIAELEMENT*/
/************************************************
****************CUSTOMIZATION********************
************************************************/
/*DEMO*/
.demo-buttons .btn {
  margin-right: 7px;
  margin-bottom: 7px;
}
.demo-grid .row-fluid {
  margin-bottom: 20px;
}
.demo-grid [class*="span"] {
  height: 20px;
  background: #ccc;
}
.demo-icons .span3 > span {
  font-size: 15px;
  margin-bottom: 10px;
  display: block;
}
/*END DEMO*/
/*RESPONSIVE*/
@media (max-width: 1000px) {
  .top-area .title-hero {
    font-size: 50px;
  }
}
@media (max-width: 670px) {
  .top-area .title-hero {
    font-size: 40px;
  }
}
@media (max-width: 767px) {
  body {
    padding: 0;
  }
}
@media (max-width: 767px) {
  .container {
    padding: 0 30px;
  }
}
/*END RESPONSIVE*/

[class*="col-"] [class*="span"]{
    margin-bottom: -99999px;
    padding-bottom: 99999px;
}

.row{
    overflow: hidden; 
}

